--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-<h1 class="mainTitle">Coffee!</h1>
+<div class="container row justify-content-center mx-auto">
+    <h1 class="text-center col-12 mx-auto p-5">Coffee!</h1><hr>
 <div class="d-flex-row col-6" id="forms">
-<form>
+<form class="col mx-auto p-3">
     <p>
     <label for="roast-selection"><strong class="subTitle">Roast</strong>
 <!--function updatecoffee from JS-->
@@ -23,19 +24,19 @@
         </select>
     </label>
     </p>
-    <label for="coffeeName"><strong class="subTitle">Coffee Name</strong></label>
+    <label for="coffeeName"><strong class="subTitle">Coffee Name</strong></label><br>
     <input id="coffeeName" value="" type="text" onkeyup="coffeeElimination(value)"/><br>
     <p>
-    <button id="addCoffeeBtn1" type="button">Submit</button>
+        <button id="addCoffeeBtn1" type="button" class="btn btn-primary mt-3">Submit</button>
     </p>
 </form>
 
 
 <h2 class="title">Add a Coffee</h2>
 
-<form>
+<form class="col mx-auto">
     <p>
-        <label for="addCoffeeRoast"><strong>Roast</strong></label>
+        <label for="addCoffeeRoast"><strong class="subTitle">Roast</strong></label>
         <select id="addCoffeeRoast">
             <option value="light">light</option>
             <option value="medium">medium</option>
@@ -47,15 +48,15 @@
 
 
     </p>
-    <label for="nameOfAddedCoffee"><strong class="subTitle">Name</strong></label>
-    <input id="nameOfAddedCoffee" value="" type="text"/><br>
+    <label for="nameOfAddedCoffee"><strong class="subTitle ml-3">Name</strong></label><br>
+    <input class="ml-3" id="nameOfAddedCoffee" value="" type="text"/><br>
     <p>
-    <button id="addCoffeeBtn2" type="button" onclick="coffeeSearch()">Submit</button>
+        <button id="addCoffeeBtn2" type="button" onclick="coffeeSearch()" class="btn btn-primary ml-3 mt-3">Submit</button>
     </p>
 </form>
 </div>
 
-<div class="d-flex col-6 justify-content float-right" id="coffees"></div>
+<div class="d-flex-row flex-wrap col-6" id="coffees"></div>
 
 
 <script src="main.js"></script>
